--- a/crafting.html
+++ b/crafting.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <meta charset="UTF-8">
+  <title>Wreck that Wallet NW Crafting Simulator</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="/resources/demos/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
