--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 		#wrapper {
 			width: 80%;
 		}
+		
+		#instructions {
+			font-weight: bold;
+			padding-bottom: 5px;
+		}
 	</style>
 	<script>
 function getRandomInt(min, max) {
@@ -249,6 +254,9 @@ function cost() {
 	</script>
 	<body>
 	<div id='wrapper'>
+		<div class="row">
+			<div id="instructions">Drag perks to the left to either require them, require at least n of them, or exclude them. Double clicking a perk will highlight and guarantee via charm</div>
+		</div>
 		<div class="row">
 			<div class="column">
 				<div class="row">
