--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ function cost() {
 				<div id="filters">
 					<span>Must</span>
 					<ul id="must_list" class="droppable connectedSortable"></ul>
-					<span>At least <input id="at_least_count" type="number" min=1 max=3 /></span>
+					<span>At least <input id="at_least_count" type="number" min=1 max=3 value="1" /></span>
 					<ul id="at_least_pool" class="droppable connectedSortable"></ul>
 					<span>None</span>
 					<ul id="none_list" class="droppable connectedSortable"></ul>
