--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@ function generateItem(forced) {
 	
 	//is it a 600?
 	let perk_count = getRandomInt(0, 6) === 5 ? 3 : 2;
+	if(isShieldSelected()) {
+		perk_count = 3;
+	}
 	
 	for(let i=item.length; i < perk_count; i++) {
 		let perk = getPerk(_perks, labels);
@@ -124,6 +127,12 @@ function generateItem(forced) {
 	}
 	
 	return item;
+}
+
+function isShieldSelected() {
+	const select = document.getElementById('item_type');	
+	const selected = select.options[select.selectedIndex].text;
+	return selected.includes('Shield');
 }
 
 let _perks;
